# rash

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  start.html  start.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
